# sdl3_asteroid_destroyer_game

./: CMakeLists.txt  README.md  gtkn
src/: main.cpp
src/core/: algorithm.cpp  algorithm.h  app.cpp  app.h  audio.cpp  audio.h  entity.cpp  entity.h  entitymanager.h  textui.cpp  textui.h  time.c  time.h  ui.cpp  ui.h  uimanager.h
src/game/: asteroid.cpp  asteroid.h  asteroidmanager.cpp  asteroidmanager.h  bullet.cpp  bullet.h  bulletmanager.cpp  bulletmanager.h  buttonui.cpp  buttonui.h  enemy.cpp  enemy.h  player.cpp  player.h  variables.c  variables.h
